syntax = "proto3";

package helloworld.v1;

import "google/api/annotations.proto";

option go_package = "kubecit/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.helloworld.v1";
option java_outer_classname = "HelloworldProtoV1";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/helloworld/{name}"
    };
  }

  // Register a user
  rpc UserRegister (UserRegisterRequest) returns (UserRegisterResponse) {
    option (google.api.http) = {
      post: "/user/register"
      body: "*"
    };
  }

  rpc UserList (Empty) returns (UserListResponse) {
    option (google.api.http) = {
      get: "/user"
    };
  }


  rpc ClusterList (Empty) returns (ClusterListResponse) {
    option (google.api.http) = {
      get: "/clusters"
    };
  }

  rpc NamespaceList (NamespaceReq) returns (NamespaceResp) {
    option (google.api.http) = {
      get: "/namespaces/{cluster}"
    };
  }

  rpc GetInstance(GetInstanceRequest) returns (GetInstanceReply) {
    option (google.api.http) = {
      get: "/cmdb/getInstance/{InstanceId}",
    };
  };
  rpc CreateInstance(CreateInstanceRequest) returns (CreateInstanceReply) {
    option (google.api.http) = {
      post: "/cmdb/createInstance",
      body: "*",
    };
  };
  rpc ListInstances(ListInstancesRequest) returns (ListInstancesReply){
    option (google.api.http) = {
      get: "/cmdb/listInstances",
    };
  };
  rpc DeleteInstanceById(DeleteInstanceRequest) returns (DeleteInstanceReply){
    option (google.api.http) = {
      delete: "/cmdb/deleteInstance/{InstanceId}",
    };
  };
  rpc UpdateInstance(UpdateInstanceRequest) returns (UpdateInstanceReply){
    option (google.api.http) = {
      put: "/cmdb/updateInstance/{InstanceId}",
      body: "*",
    };
  };
  rpc SyncFromTencent(SyncFromTencentRequest) returns (SyncFromTencentReply) {
    option (google.api.http) = {
      post: "/cmdb/SyncFromTencent",
      body: "*",
    };
  };
  rpc DeploymentList (DeploymentReq) returns (DeploymentResp) {
    option (google.api.http) = {
      get: "/deployments/{cluster}/{namespace}"
    };
  }

  // Register a cluster
  rpc ClusterRegister (ClusterKubeconfig) returns (ClusterBase) {
    option (google.api.http) = {
      post: "/cluster"
      body: "*"
    };
  }

  // Delete a cluster
  rpc ClusterDelete (ClusterBase) returns (Empty) {
    option (google.api.http) = {
      delete: "/cluster/{id}"
    };
  }

  // Get a cluster
  rpc ClusterGet (ClusterBase) returns (ClusterBase) {
    option (google.api.http) = {
      get: "/cluster/{id}"
    };
  }

  // Update a cluster
  rpc ClusterUpdate (ClusterBase) returns (ClusterBase) {
    option (google.api.http) = {
      put: "/cluster/{id}"
      body: "*"
    };
  }

}


message Empty {}

message User {
  string username = 1;
  string password = 2;
}

message UserListResponse{
  repeated User users = 1;
}

message Cluster {
  string kubeconfig = 1;
  int32  id = 2;
}

message  ClusterListResponse{
  repeated Cluster clusters = 1;
}

message UserRegisterRequest {
  string username = 1;
  string password = 2;
}

message UserRegisterResponse {
  string result = 1;
}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message NamespaceResp {
  repeated string namespaces =1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message Host {
  string VpcId = 1;
  string SubnetId = 2;
  string InstanceId = 3;
  string InstanceName = 4;
  string InstanceState = 5;
  int64 CPU = 6;
  int64 Memory = 7;
  string CreatedTime = 8;
  string InstanceType = 9;
  int64 EniLimit = 10;
  int64 EnilpLimit = 11;
  int64 InstanceEniCount = 12;
}

message SyncFromTencentRequest{
  string accessKey = 1;
  string secretKey = 2;
  string region = 3;
  string vpcId = 4;
}

message SyncFromTencentReply {
  string message = 1;
  int64 total = 2;
}

message GetInstanceRequest {
  string InstanceId = 1;
}

message GetInstanceReply {
  Host Instance = 1;
}

message CreateInstanceRequest {
  Host Instance = 1;
}

message CreateInstanceReply {
  Host Instance = 1;
}

message ListInstancesRequest {}

message ListInstancesReply {
  int64 total = 1;
  repeated Host Instances = 2;
}

message UpdateInstanceRequest {
  string InstanceId = 1;
  Host Instance = 2;
}

message UpdateInstanceReply {
  Host Instance = 1;
  string Message = 2;
}

message DeleteInstanceRequest {
  string InstanceId = 1;
}

message DeleteInstanceReply {
  string Message = 1;
}

message NamespaceReq{
  int32 cluster = 1;
}

message DeploymentReq{
  int32 cluster = 1;
  string namespace = 2;
}

message DeploymentResp {
  repeated string deployments =1;
}

message ClusterBase {
  int64 id = 1;
  string kubeconfig = 2;
}

message ClusterKubeconfig{
  string kubeconfig = 1;
}
